-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
a18453730 (dev), 43a3ef03f (6.8)
Both PointRenderer and AreaRenderer don't seem to delete PointGroups that they create.
For Gerrit Dashboard: QTBUG-127253 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
578714,2 | Delete created PointGroups | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
579435,2 | Delete created PointGroups | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |