Delete created PointGroups

Fixes: QTBUG-127253
Change-Id: I480c2c0efb7ba7bccd44575a5dac3e848b0b4e92
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
(cherry picked from commit a18453730c9b47b6651d8227e9c36b1b752e6784)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>